--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="modal.js" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -57,7 +56,9 @@
       <section class="section hero">
         <div class="container hero">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button type="button" class="button order primary">Заказать услугу</button>
+          <button type="button" class="button order primary" data-modal-open>
+            Заказать услугу
+          </button>
         </div>
       </section>
       <!-- Особенности работы -->
@@ -119,14 +120,17 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
 
           <ul class="work list">
-            <li class="item">
+            <li class="item one">
               <img src="./images/photo-box1.jpg" alt="Програмист пишет код" width="370" />
+              <p class="work-text">Десктопные приложения</p>
             </li>
-            <li class="item">
+            <li class="item two">
               <img src="./images/photo-box2.jpg" alt="Телефон и ноутбук" width="370" />
+              <p class="work-text">Мобильные приложения</p>
             </li>
-            <li class="item">
+            <li class="item three">
               <img src="./images/photo-box3.jpg" alt="Палитра цветов на планшете" width="370" />
+              <p class="work-text">Дизайнерские решения</p>
             </li>
           </ul>
         </div>
@@ -341,5 +345,9 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal"><button class="btn-modal" data-modal-close>&#10006</button></div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
