Проблемы с выезжающим окном портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,9 +68,16 @@
           </ul>
           <!-- Примеры работ -->
           <ul class="works list">
-            <li class="item">
+            <li class="item item-one">
               <a href="" class="link">
                 <img src="./images/webphoto.jpg" alt="Открытый веб-сайт на ноутбуке" width="370" />
+                <div class="works-overlate">
+                  <p class="works-description">
+                    Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения  о
+                    компании или частном лице.
+                  </p>
+                </div>
                 <div class="desc">
                   <h2 class="list-title">Технокряк</h2>
                   <p class="name">Веб-сайт</p>
