--- a/portfolio.html
+++ b/portfolio.html
@@ -70,12 +70,16 @@
           <ul class="works list">
             <li class="item item-one">
               <a href="" class="link">
-                <img src="./images/webphoto.jpg" alt="Открытый веб-сайт на ноутбуке" width="370" />
                 <div class="works-overlate">
+                  <img
+                    src="./images/webphoto.jpg"
+                    alt="Открытый веб-сайт на ноутбуке"
+                    width="370"
+                  />
                   <p class="works-description">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
-                    сервисов. Все это позволит посетителю получить исчерпывающие сведения  о
-                    компании или частном лице.
+                    сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
+                    или частном лице.
                   </p>
                 </div>
                 <div class="desc">
