--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
           </ul>
           <!-- Примеры работ -->
           <ul class="works list">
-            <li class="item item-one">
+            <li class="item">
               <a href="" class="link">
                 <div class="works-overlate">
                   <img
@@ -90,7 +90,14 @@
             </li>
             <li class="item">
               <a href="" class="link"
-                ><img src="./images/poster.jpg" alt="Постер два баскетболиста" width="370" />
+                ><div class="works-overlate">
+                  <img src="./images/poster.jpg" alt="Постер два баскетболиста" width="370" />
+                  <p class="works-description">
+                    Текст второй карточки.Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить исчерпывающие
+                    сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="desc">
                   <h2 class="list-title">Постер <span lang="en">Orlean vs Golden Star</span></h2>
                   <p class="name">Дизайн</p>
@@ -99,7 +106,14 @@
             </li>
             <li class="item">
               <a href="" class="link"
-                ><img src="./images/seafood.jpg" alt="Логотип ресторана" width="370" />
+                ><div class="works-overlate">
+                  <img src="./images/seafood.jpg" alt="Логотип ресторана" width="370" />
+                  <p class="works-description">
+                    Текст третьей карточки.Ресурс предлагает комплексные предложения с разным
+                    уровнем функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="desc">
                   <h2 class="list-title">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="name">Приложение</p>
@@ -108,7 +122,14 @@
             </li>
             <li class="item">
               <a href="" class="link"
-                ><img src="./images/earphon.jpg" alt="Наушники" width="370" />
+                ><div class="works-overlate">
+                  <img src="./images/earphon.jpg" alt="Наушники" width="370" />
+                  <p class="works-description">
+                    Текст четвертой карточки.Ресурс предлагает комплексные предложения с разным
+                    уровнем функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="desc">
                   <h2 class="list-title">Проект <span lang="en">Prime</span></h2>
                   <p class="name">Маркетинг</p>
@@ -117,7 +138,14 @@
             </li>
             <li class="item">
               <a href="" class="link"
-                ><img src="./images/boxs.jpg" alt="Две коробки" width="370" />
+                ><div class="works-overlate">
+                  <img src="./images/boxs.jpg" alt="Две коробки" width="370" />
+                  <p class="works-description">
+                    Текст пятой карточки.Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить исчерпывающие
+                    сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="desc">
                   <h2 class="list-title">Проект <span lang="en">Boxes</span></h2>
                   <p class="name">Приложение</p>
@@ -126,7 +154,14 @@
             </li>
             <li class="item">
               <a href="" class="link"
-                ><img src="./images/monitor.jpg" alt="Открытый веб-сайт на мониторе" width="370" />
+                ><div class="works-overlate">
+                  <img src="./images/monitor.jpg" alt="Открытый веб-сайт на мониторе" width="370" />
+                  <p class="works-description">
+                    Текст шестой карточки.Ресурс предлагает комплексные предложения с разным уровнем
+                    функционала и сервисов. Все это позволит посетителю получить исчерпывающие
+                    сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="desc">
                   <h2 lang="en" class="list-title">Inspiration has no Borders</h2>
                   <p class="name">Веб-сайт</p>
@@ -135,7 +170,14 @@
             </li>
             <li class="item">
               <a href="" class="link"
-                ><img src="./images/book.jpg" alt="Открытая книга" width="370" />
+                ><div class="works-overlate">
+                  <img src="./images/book.jpg" alt="Открытая книга" width="370" />
+                  <p class="works-description">
+                    Текст седьмой карточки.Ресурс предлагает комплексные предложения с разным
+                    уровнем функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="desc">
                   <h2 class="list-title">Издание <span lang="en">Limited Edition</span></h2>
                   <p class="name">Дизайн</p>
@@ -144,7 +186,13 @@
             </li>
             <li class="item">
               <a href="" class="link"
-                ><img src="./images/leib.jpg" alt="Бирка" width="370" />
+                ><div class="works-overlate">
+                <img src="./images/leib.jpg" alt="Бирка" width="370" />
+                <p class="works-description">
+                  Текст восьмой карточки.Ресурс предлагает комплексные предложения с разным уровнем
+                  функционала и сервисов. Все это позволит посетителю получить исчерпывающие
+                  сведения о компании или частном лице.
+                </p>
                 <div class="desc">
                   <h2 class="list-title">Проект <span lang="en">LAB</span></h2>
                   <p class="name">Маркетинг</p>
@@ -153,7 +201,18 @@
             </li>
             <li class="item">
               <a href="" class="link"
-                ><img src="./images/netbook.jpg" alt="Открытое приложение на нетбуке" width="370" />
+                ><div class="works-overlate">
+                  <img
+                    src="./images/netbook.jpg"
+                    alt="Открытое приложение на нетбуке"
+                    width="370"
+                  />
+                  <p class="works-description">
+                    Текст девятой карточки.Ресурс предлагает комплексные предложения с разным
+                    уровнем функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="desc">
                   <h2 lang="en" class="list-title">Growing Business</h2>
                   <p class="name">Приложение</p>
