ДЗ-5. Добавил потерявшийся див)

--- a/portfolio.html
+++ b/portfolio.html
@@ -187,12 +187,13 @@
             <li class="item">
               <a href="" class="link"
                 ><div class="works-overlate">
-                <img src="./images/leib.jpg" alt="Бирка" width="370" />
-                <p class="works-description">
-                  Текст восьмой карточки.Ресурс предлагает комплексные предложения с разным уровнем
-                  функционала и сервисов. Все это позволит посетителю получить исчерпывающие
-                  сведения о компании или частном лице.
-                </p>
+                  <img src="./images/leib.jpg" alt="Бирка" width="370" />
+                  <p class="works-description">
+                    Текст восьмой карточки.Ресурс предлагает комплексные предложения с разным
+                    уровнем функционала и сервисов. Все это позволит посетителю получить
+                    исчерпывающие сведения о компании или частном лице.
+                  </p>
+                </div>
                 <div class="desc">
                   <h2 class="list-title">Проект <span lang="en">LAB</span></h2>
                   <p class="name">Маркетинг</p>
