--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
-      <div class="modal"><button class="btn-modal" data-modal-close>&#10006</button></div>
+      <div class="modal"><button class="btn-modal" data-modal-close>&#10006;</button></div>
     </div>
     <script src="./js/modal.js"></script>
   </body>
