--- a/portfolio.html
+++ b/portfolio.html
@@ -69,7 +69,7 @@
           <!-- Примеры работ -->
           <ul class="works list">
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="link link-card">
                 <div class="works-overlate">
                   <img
                     src="./images/webphoto.jpg"
@@ -89,7 +89,7 @@
               >
             </li>
             <li class="item">
-              <a href="" class="link"
+              <a href="" class="link link-card"
                 ><div class="works-overlate">
                   <img src="./images/poster.jpg" alt="Постер два баскетболиста" width="370" />
                   <p class="works-description">
@@ -105,7 +105,7 @@
               >
             </li>
             <li class="item">
-              <a href="" class="link"
+              <a href="" class="link link-card"
                 ><div class="works-overlate">
                   <img src="./images/seafood.jpg" alt="Логотип ресторана" width="370" />
                   <p class="works-description">
@@ -121,7 +121,7 @@
               >
             </li>
             <li class="item">
-              <a href="" class="link"
+              <a href="" class="link link-card"
                 ><div class="works-overlate">
                   <img src="./images/earphon.jpg" alt="Наушники" width="370" />
                   <p class="works-description">
@@ -137,7 +137,7 @@
               >
             </li>
             <li class="item">
-              <a href="" class="link"
+              <a href="" class="link link-card"
                 ><div class="works-overlate">
                   <img src="./images/boxs.jpg" alt="Две коробки" width="370" />
                   <p class="works-description">
@@ -153,7 +153,7 @@
               >
             </li>
             <li class="item">
-              <a href="" class="link"
+              <a href="" class="link link-card"
                 ><div class="works-overlate">
                   <img src="./images/monitor.jpg" alt="Открытый веб-сайт на мониторе" width="370" />
                   <p class="works-description">
@@ -169,7 +169,7 @@
               >
             </li>
             <li class="item">
-              <a href="" class="link"
+              <a href="" class="link link-card"
                 ><div class="works-overlate">
                   <img src="./images/book.jpg" alt="Открытая книга" width="370" />
                   <p class="works-description">
@@ -185,7 +185,7 @@
               >
             </li>
             <li class="item">
-              <a href="" class="link"
+              <a href="" class="link link-card"
                 ><div class="works-overlate">
                   <img src="./images/leib.jpg" alt="Бирка" width="370" />
                   <p class="works-description">
@@ -201,7 +201,7 @@
               >
             </li>
             <li class="item">
-              <a href="" class="link"
+              <a href="" class="link link-card"
                 ><div class="works-overlate">
                   <img
                     src="./images/netbook.jpg"
